# Ai-homework

./: .gitignore  A_star.py  README.md  csp.py  experiment_Astar.py  experiment_csp.py  n_queens.py  pyproject.toml
