[project]
name = "Ai-Homework"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Zunza5", email = "cazualdi@icloud.com"},
]
dependencies = ["z3-solver>=4.15.4.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
